--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1> sol de media noche</h1>
-
+        <p>aui hay texto y solo texto mucho texto</p>
+        <h2>sol de media noche</h2>
     </body>
 </html>
